// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Button Blue 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2b9fe5",
      "borderRadius": 10,
      "height": 35,
      "justifyContent": "center",
      "opacity": 1,
      "width": "35%",
    }
  }
>
  <Text
    style={
      Object {
        "color": "white",
        "fontWeight": "bold",
      }
    }
  />
</View>
`;

exports[`renders Button Red 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#f03737",
      "borderRadius": 10,
      "height": 35,
      "justifyContent": "center",
      "opacity": 1,
      "width": "35%",
    }
  }
>
  <Text
    style={
      Object {
        "color": "white",
        "fontWeight": "bold",
      }
    }
  />
</View>
`;

exports[`renders Card Contact 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#e1e1e1",
        "borderRadius": 8,
        "flexDirection": "row",
        "height": 90,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderRadius": 8,
          "justifyContent": "center",
          "width": "26%",
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "https://sdfs",
          }
        }
        style={
          Object {
            "borderRadius": 40,
            "borderWidth": 1,
            "height": 80,
            "width": 80,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "marginHorizontal": 14,
          "marginVertical": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        bayu
         
        air
      </Text>
      <Text>
        30
         Years Old
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders INput Text 1`] = `
<TextInput
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#d4d4d4",
      "borderRadius": 10,
      "borderWidth": 1,
      "height": 36,
      "justifyContent": "center",
      "marginTop": 5,
      "paddingHorizontal": 10,
    }
  }
/>
`;

exports[`renders Label 1`] = `
<Text
  style={
    Object {
      "marginTop": 10,
    }
  }
/>
`;

exports[`renders Loading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "marginTop": 10,
    }
  }
>
  <ActivityIndicator
    color="blue"
    size="small"
  />
  <Text>
     
  </Text>
</View>
`;
